syntax = "proto3";

option go_package = "github.com/cofide/minispire/wimse/pb";

service MiniSPIREWorkloadAPI{
  rpc MintWITSVID(WITSVIDRequest) returns (WITSVIDResponse);
}


// The WITSVIDRequest message conveys parameters for requesting a WIT-SVID.
message WITSVIDRequest {
    // Optional. The requested SPIFFE ID for the WIT-SVID. If unset, all WIT-SVIDs
    // to which the workload is entitled are requested.
    string spiffe_id = 1;
}

// The WITSVIDResponse message carries WIT-SVIDs .
message WITSVIDResponse {
    // Required.
    // A list of WITSVID messages, each of which includes a single WIT-SVID and
    // its private key.
    repeated WITSVID svids = 1;
}

// The WITSVID message carries a single SVID and all associated information,
// including the WIT bundle for the trust domain.
message WITSVID {
    // Required.
    // The SPIFFE ID of the SVID in this entry
    string spiffe_id = 1;

    // Required.
    // Encoded WIT SVID using compact JWS serialization.
    string wit_svid = 2;

    // Required.
    // JWK (RFC 7517) encoded private key for the WIT SVID.
    string wit_svid_key = 3;

    // Optional.
    // An operator-specified string used to provide guidance on how this identity
    // should be used by a workload when more than one SVID is returned.
    // For example, `internal` and `external` to indicate a SVID for internal or
    // external use, respectively.
    string hint = 4;
}

// The WITBundlesRequest message conveys parameters for requesting WIT
// bundles. There are currently no such parameters.
message WITBundlesRequest {}

// The WITBundlesResponse message carries a map of trust bundles the workload
// should trust.
message WITBundlesResponse {
    // Required.
    // WIT trust bundles belonging to trust domains that the workload should
    // trust, keyed by the SPIFFE ID of the trust domain.
    // Bundles are encoded in JWK set (RFC 7517) format.
    map<string, string> bundles = 1;
}
